# GAPP-cli

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
scripts/: gen_sounds.py
src/gapp/: __init__.py  cli.py  config.py  gps.py  mavlink.py  telemetry.py  uploader.py
src/gapp/sounds/: __init__.py
