[project]
name = "gapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vilém Raška" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gapp = "gapp:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

