[project]
name = "gapp"
version = "0.1.0"
description = "Command line module for GAPP"
readme = "README.md"
authors = [
    { name = "Vilém Raška" }
]
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "gpsdclient>=1.3.2",
]

[project.scripts]
gapp = "gapp.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
